almost at MVP, but still having layout issues

--- a/index.html
+++ b/index.html
@@ -1,19 +1,94 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
 
-  <title>My Resume</title>
+    <title>Ben Haus's Resume</title>
 
-  <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Belgrano|Open+Sans&display=swap"
+      rel="stylesheet"
+    />
 
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
-</head>
+    <!--[if lt IE 9]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
 
-<body>
-  <h1>My Resume</h1>
-</body>
+    <script src="https://kit.fontawesome.com/fe52ba4c73.js" crossorigin="anonymous"></script>
+  </head>
+
+  <body>
+    <div class="mainContainer">
+      <section class="rightSide">
+        <header>
+          <h1>Benjamin Haus</h1>
+          <h2>Mechanical Engineer</h2>
+          <h2>Web Development Student</h2>
+        </header>
+        <div class="outerContentBox">
+          <section class="contentBox" id="intro">
+            <h3>Intro</h3>
+            <p>I'm blah blah blah</p>
+          </section>
+          <section class="contentBox" id="skills">
+            <h3>Engineering Skills</h3>
+            <ul>
+              <li>blah</li>
+              <li>hey</li>
+              <li>ho</li>
+              <li>let's go</li>
+            </ul>
+            <h3>WebDev Skills</h3>
+            <ul>
+              <li>blah</li>
+              <li>hey</li>
+              <li>ho</li>
+              <li>let's go</li>
+            </ul>
+          </section>
+        </div>
+      </section>
+      <!--this closes right side-->
+      <aside class="leftSide">
+        <header>
+          <img src="images/bw_headshot.jpg" alt="Photo of Ben in a suit!" />
+          <a href="https://phillybenh.github.io/portfolio-website/"><button class="button">See my work</a></button>
+        </header>
+        <div class="outerContentBox">
+          <section class="contentBox" id="workHistory">
+            <h3>Career History</h3>
+            <h4>U.S. Navy</h4>
+            <h5>Mechanical Engineer</h5>
+            <ul>
+              <li>blah</li>
+              <li>hey</li>
+            </ul>
+          </section>
+          <section class="contentBox" id="academicBackground">
+            <h3>Achademic Background</h3>
+            <h4>Lambda School</h4>
+            <h5>Full Stack Web Development</h5>
+            <p>stuff adn things forever</p>
+            <h4>The Pennsylvania State University</h4>
+            <h5>B.S. Mechanical Engineering (2008)</h5>
+          </section>
+          <section class="contentBox" id="contact">
+            <h3>Contact</h3>
+            <section class="social">
+              <a href="mailto:ben@little-haus.com" target="_blank"><i class="fas fa-envelope"></i></a>
+              <a href="https://www.linkedin.com/in/benjamin-haus-186397143/" target="_blank"><i class="fab fa-linkedin"></i></a>
+              <a href="https://www.instagram.com/bth5001/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+
+            </section>
+
+            
+
+        </div>
+      </aside>
+      <!--this closes left side-->
+    </div>
+    <!--end of .mainContainer div-->
+  </body>
 </html>
