still needs a nav and phone version, but looking beter

--- a/index.html
+++ b/index.html
@@ -30,28 +30,32 @@
         <div class="outerContentBox">
           <section class="contentBox" id="intro">
             <h3>Intro</h3>
-            <p>I'm blah blah blah</p>
+            <p>I’m Ben Has.and I enjoy Lorem Ipsum ist ein einfacher Demo-Text für die Print- und Schriftindustrie. Lorem Ipsum ist in der Industrie bereits der Standard Demo-Text seit 1500, als ein unbekannter Schriftsteller eine Hand voll Wörter nahm und diese durcheinander warf um ein Musterbuch zu erstellen. </p>
+            <p>Es hat nicht nur 5 Jahrhunderte überlebt, sondern auch in Spruch in die elektronische Schriftbearbeitung geschafft (bemerke, nahezu unverändert). Bekannt wurde es 1960, mit dem erscheinen von "Letraset", welches Passagen von Lorem Ipsum enhielt, so wie Desktop Software wie "Aldus PageMaker" - ebenfalls mit Lorem Ipsum. </p>
           </section>
           <section class="contentBox" id="skills">
-            <h3>Engineering Skills</h3>
+           <!--<h3>Engineering Skills</h3>
             <ul>
               <li>blah</li>
               <li>hey</li>
               <li>ho</li>
               <li>let's go</li>
-            </ul>
+            </ul> -->
             <h3>WebDev Skills</h3>
             <ul>
-              <li>blah</li>
-              <li>hey</li>
-              <li>ho</li>
-              <li>let's go</li>
+              <li>HTML5</li>
+              <li>CSS3</li>
+              <li>PYTHON</li>
+              <li>JavaScript</li>
+              <li>git</li>
+              <li>Yarn</li>
+              <li>{less}</li>
             </ul>
           </section>
         </div>
       </section>
       <!--this closes right side-->
-      <aside class="leftSide">
+      <section class="leftSide">
         <header>
           <img src="images/bw_headshot.jpg" alt="Photo of Ben in a suit!" />
           <a href="https://phillybenh.github.io/portfolio-website/"><button class="button">See my work</a></button>
@@ -62,15 +66,22 @@
             <h4>U.S. Navy</h4>
             <h5>Mechanical Engineer</h5>
             <ul>
-              <li>blah</li>
-              <li>hey</li>
+              <li>Specialized in ship shock hardening and protection </li>
+              <li>Expert in:
+                <ul>
+                  <li>Equipment Shock Testing</li>
+                  <li>Shock Analysis and The Dynamic Design Analysis Method</li>
+                  <li>Full Ship Shock Trials</li>
+                  <li>Structural Inspections</li>
+                </ul>
+              </li>
             </ul>
           </section>
           <section class="contentBox" id="academicBackground">
             <h3>Achademic Background</h3>
             <h4>Lambda School</h4>
             <h5>Full Stack Web Development</h5>
-            <p>stuff adn things forever</p>
+            <p>Started the program in February 2020</p>
             <h4>The Pennsylvania State University</h4>
             <h5>B.S. Mechanical Engineering (2008)</h5>
           </section>
@@ -86,7 +97,7 @@
             
 
         </div>
-      </aside>
+      </section>
       <!--this closes left side-->
     </div>
     <!--end of .mainContainer div-->
