committing MVP + two stretches

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="mainContainer">
       <section class="rightSide">
         <header>
-          <h1>Benjamin Haus</h1>
+          <h1>Ben Haus</h1>
           <h2>Mechanical Engineer</h2>
           <h2>Web Development Student</h2>
         </header>
@@ -87,14 +87,15 @@
           </section>
           <section class="contentBox" id="contact">
             <h3>Contact</h3>
-            <section class="social">
+            <nav class="social">
               <a href="mailto:ben@little-haus.com" target="_blank"><i class="fas fa-envelope"></i></a>
+              <a href="https://github.com/phillybenh" target="_blank"><i class="fab fa-github-square"></i></a>
               <a href="https://www.linkedin.com/in/benjamin-haus-186397143/" target="_blank"><i class="fab fa-linkedin"></i></a>
               <a href="https://www.instagram.com/bth5001/" target="_blank"><i class="fab fa-instagram-square"></i></a>
 
-            </section>
+            </nav>
 
-            
+            </section>
 
         </div>
       </section>
